# FiboOuSum

./: .gitignore  CMakeLists.txt  README.md
include/: sum.h
src/: lib.c  main.c
tests/: test_sum.c  test_sum.cpp
